@@ -29,7 +29,6 @@ import io.kadai.testapi.security.JaasExtensionTestExtensions.ShouldThrowParamete
 import java.util.Iterator;
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
@@ -424,21 +423,21 @@ class JaasExtensionTest {
 
   @TestFactory
   Iterable<DynamicTest> should_NotSetAccessIdForDynamicTestInIterable_When_AnnotationIsMissing() {
-    return Stream.of(NULL_DYNAMIC_TEST, NULL_DYNAMIC_TEST).collect(Collectors.toList());
+    return Stream.of(NULL_DYNAMIC_TEST, NULL_DYNAMIC_TEST).toList();
   }
 
   @WithAccessId(user = INSIDE_DYNAMIC_TEST_USER)
   @TestFactory
   Iterable<DynamicTest> should_SetAccessIdForDynamicTestInIterable_When_AnnotationExists() {
     return Stream.of(DYNAMIC_TEST_USER_DYNAMIC_TEST, DYNAMIC_TEST_USER_DYNAMIC_TEST)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @WithAccessId(user = INSIDE_DYNAMIC_TEST_USER)
   @WithAccessId(user = INSIDE_DYNAMIC_TEST_USER)
   @TestFactory
   Iterable<DynamicTest> should_SetMultipleAccessIdForDynamicTestInIterable_When_AnnotationsExist() {
-    return Stream.of(NOT_NULL_DYNAMIC_TEST, NOT_NULL_DYNAMIC_TEST).collect(Collectors.toList());
+    return Stream.of(NOT_NULL_DYNAMIC_TEST, NOT_NULL_DYNAMIC_TEST).toList();
   }
 
   // WITH DynamicContainer
@@ -449,7 +448,7 @@ class JaasExtensionTest {
     Supplier<DynamicContainer> supplier =
         () ->
             dynamicContainer("dynamic container", Stream.of(NULL_DYNAMIC_TEST, NULL_DYNAMIC_TEST));
-    return Stream.generate(supplier).limit(2).collect(Collectors.toList());
+    return Stream.generate(supplier).limit(2).toList();
   }
 
   @WithAccessId(user = INSIDE_DYNAMIC_TEST_USER)
@@ -461,7 +460,7 @@ class JaasExtensionTest {
             dynamicContainer(
                 "dynamic container",
                 Stream.of(DYNAMIC_TEST_USER_DYNAMIC_TEST, DYNAMIC_TEST_USER_DYNAMIC_TEST));
-    return Stream.generate(supplier).limit(2).collect(Collectors.toList());
+    return Stream.generate(supplier).limit(2).toList();
   }
 
   @WithAccessId(user = INSIDE_DYNAMIC_TEST_USER)
@@ -473,7 +472,7 @@ class JaasExtensionTest {
         () ->
             dynamicContainer(
                 "dynamic container", Stream.of(NOT_NULL_DYNAMIC_TEST, NOT_NULL_DYNAMIC_TEST));
-    return Stream.generate(supplier).limit(2).collect(Collectors.toList());
+    return Stream.generate(supplier).limit(2).toList();
   }
 
   // WITH nested DynamicContainer
@@ -485,7 +484,7 @@ class JaasExtensionTest {
         () -> dynamicContainer("inside container", Stream.of(NULL_DYNAMIC_TEST, NULL_DYNAMIC_TEST));
     Supplier<DynamicContainer> outsideSupplier =
         () -> dynamicContainer("outside container", Stream.of(supplier.get(), NULL_DYNAMIC_TEST));
-    return Stream.generate(outsideSupplier).limit(2).collect(Collectors.toList());
+    return Stream.generate(outsideSupplier).limit(2).toList();
   }
 
   @WithAccessId(user = INSIDE_DYNAMIC_TEST_USER)
@@ -501,7 +500,7 @@ class JaasExtensionTest {
         () ->
             dynamicContainer(
                 "outside container", Stream.of(supplier.get(), DYNAMIC_TEST_USER_DYNAMIC_TEST));
-    return Stream.generate(outsideSupplier).limit(2).collect(Collectors.toList());
+    return Stream.generate(outsideSupplier).limit(2).toList();
   }
 
   @WithAccessId(user = INSIDE_DYNAMIC_TEST_USER)
@@ -516,7 +515,7 @@ class JaasExtensionTest {
     Supplier<DynamicContainer> outsideSupplier =
         () ->
             dynamicContainer("outside container", Stream.of(supplier.get(), NOT_NULL_DYNAMIC_TEST));
-    return Stream.generate(outsideSupplier).limit(2).collect(Collectors.toList());
+    return Stream.generate(outsideSupplier).limit(2).toList();
   }
 
   // endregion
